# matrix-tonnenbot

./: .gitignore  README.md  pyproject.toml  test-trigger.sh  tonnenbot.env.example
src/tonnenbot/: abfallnavi.py  main.py  matrix_sender.py
systemd/: tonnenbot.service
