[project]
name = "matrix-tonnenbot"
version = "0.1.0"
description = "Matrix bot that reminds a family room about upcoming waste collection pickups (AbfallNavi / regioit.de)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "matrix-nio>=0.25.0",
  "requests>=2.31",
  "apscheduler>=3.10",
]

[project.scripts]
tonnenbot = "tonnenbot.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
